# SHUCPL

./: .gitignore  2024级直招830A034《计算机编程实训》课程方案.docx  README.md  doc.md  乐器数字接口（MIDI）简介chen01.docx  乐器数字接口（MIDI）简介chen02.docx
KbMIDI/: CMakeLists.txt  KbMIDI.cpp  KbMIDI.h  KbMIDI.mdsp  KbMusic.cpp
MIDI/: niao.txt  play.cpp  起风了.txt
MakePrj/: 说明.txt
MakePrj/MakePrj/: Main.cpp  MakePrj.cpp  MakePrj.h  MakePrj.mdsp
SortShow排序秀/: CMakeLists.txt  Main.cpp  SortShow.cpp  SortShow.h  SortShow.mdsp  Sorts_Show.cpp
SortShow排序秀/SortShow排序秀(NEW)/: Data12.txt  Data13.txt
Sorts/: CMakeLists.txt  Main.cpp  Score.cpp  SortString.cpp  Sorts.h  Sorts.mdsp
Sorts/Debug/: results_debug.txt
Statistics/: statistics.cpp  statistics.mdsp
习题课/习题课1/: 习题课1-《计算机编程实训》课程安排.pptx
习题课/习题课2/: 习题课2-算法测试分析.pptx
习题课/习题课2/Hello/: Hello.cpp  Hello.msp
习题课/习题课2/Hello/Debug/: Input.txt  run.bat
习题课/习题课3/: MIDI音符编码.xlsx  乐器数字接口（MIDI）简介.docx  习题课3-MIDI程序设计.pptx
习题课/习题课3/MIDIexample/: MIDIexample.cpp  MIDIexample.h  MIDIexample.mdsp  MIDIexample.msp  main.cpp
习题课/习题课4/: 习题课4-学术论文写作.pptx
舞动的排序算法/sound-of-sorting/: 网址.txt
